# ryoiki-tenkai

./: .gitignore  README.en.md  README.ko.md  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
BE/api/: .env.example  Dockerfile  pyproject.toml
BE/api/contracts/: README.md
BE/api/contracts/async/: battle-websocket-event.schema.json  skill-execution-event.schema.json
BE/api/contracts/catalog/: mvp-gesture-catalog.json
BE/api/contracts/openapi/: admin-api.json
BE/api/migrations/: env.py
BE/api/migrations/versions/: 0001_initial_gesture_skill_tables.py  0002_game_state_storage_tables.py
BE/api/src/gesture_api/: __init__.py  dependencies.py  main.py  settings.py
BE/api/src/gesture_api/api/: exception_handlers.py
BE/api/src/gesture_api/api/routes/: game.py  gesture_commands.py  (+1 more)
BE/api/src/gesture_api/db/: session.py  unit_of_work.py
BE/api/src/gesture_api/domain/: catalog.py  errors.py  game.py  gesture.py  rating.py
BE/api/src/gesture_api/models/: __init__.py  game_state.py  gesture.py
BE/api/src/gesture_api/repositories/: game_state.py  game_state_storage.py  gesture_mapping.py  runtime_state.py
BE/api/src/gesture_api/services/: battle_websocket.py  gesture_command.py
BE/api/tests/: conftest.py
BE/api/tests/unit/: test_battle_websocket_events.py  test_contract_files.py  test_game_flow_api.py  test_game_state_storage.py  test_gesture_command_service.py  test_health_api.py
BE/core/: pyproject.toml
BE/core/src/gesture_core/: __init__.py  gesture_policy.py
BE/core/tests/unit/: test_gesture_policy.py
(+239 files in other folders)
